--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
     <script>
         var firebaseConfig = {
-            apiKey: "AIzaSyDQEYOnu3gihH6muH6N25E_iL1T_7bI-eg",
-            authDomain: "cbsh-sunday-festival.firebaseapp.com",
-            projectId: "cbsh-sunday-festival",
-            storageBucket: "cbsh-sunday-festival.appspot.com",
-            messagingSenderId: "1061184449998",
-            appId: "1:1061184449998:web:7bfe0acc6d401c5aa60f9f",
-            measurementId: "G-KQK9DX3PBL"
+            apiKey: "***************************************",
+            authDomain: "************************************",
+            projectId: "********************",
+            storageBucket: "********************************",
+            messagingSenderId: "*************",
+            appId: "******************************************",
+            measurementId: "**********L"
         };
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
